# SpaceGame

./: Cargo.toml
Blender Files/: Fuel Tank Test.blend  Fuel Tank Test.blend1  Mk-1 Command Pod.blend  Mk-1 Command Pod.blend1
GameData/Game/Parts/Command Modules/Mk-1/: mk1.json  mk1.mtl
GameData/Game/Parts/Fuel Tanks/Mk-1 FL-100/: Mk-1 FL-100.mtl  tank.json
src/: game.rs  lib.rs  motor.rs  shader.wgsl  vector3.rs
